# main

./: .env.example  .gitignore  README.md
apps/admin/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json
apps/admin/docs/: database-security.md
apps/admin/migrations/: 0001_commerce_core.sql  0002_launch_configuration.sql  0003_security_boundaries.sql  (+6 more)
apps/mobile/: App.tsx  README.md  app.json  package-lock.json  package.json  tsconfig.json  tsconfig.server.json  vercel.json
catalog/: .gitignore  README.md  pyproject.toml
catalog/fixtures/community_sample/: geometry.csv  offers.csv  stores.csv  substitutions.csv  wall_sightings.csv
catalog/fixtures/rebrickable_sample/: colors.csv  elements.csv  inventories.csv  inventory_parts.csv  part_categories.csv  part_relationships.csv  parts.csv  sets.csv
catalog/fotobrik_catalog/: __init__.py  cli.py  community.py  db.py  exporter.py  importer.py  rarity.py  schema.sql
catalog/scripts/: refresh-catalog.ps1
catalog/tests/: test_catalog.py
data/gobricks/: categories.json  colors.json  products.ndjson
data/rebrickable/: colors.csv  elements.csv
docs/: README.md  architecture.md  background-removal-security.md  brick-engine-brief.md  catalog-operations.md  checkout-recovery-runtime.md  commerce-launch-requirements.md  contact-email.md  demo-script.md  meshy-generation-batch.md  mvp-backlog.md  project-brief.md  real-pipeline.md  visual-identity.md
scripts/: verify.ps1
tools/catalog/: build-catalog-v2.mjs  build-catalog.mjs  crawl-gobricks.mjs
(+322 files in other folders)
