[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fotobrik-catalog"
version = "0.1.0"
description = "Versioned, provenance-aware parts catalog foundation for Fotobrik"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
fotobrik-catalog = "fotobrik_catalog.cli:main"

[tool.setuptools]
packages = ["fotobrik_catalog"]

[tool.setuptools.package-data]
fotobrik_catalog = ["schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
